# flod_matrikkel_address_restapi

./: api.py  app.py  matrikkel.py  pyproject.toml  readme.md  requirements.txt  run.py
test/: api_test.py  tests.py
tests/: tests.py
